se agregaron las cards de los personajes

--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Personajes Rick & Morty</title>
 </head>
+
 <body>
-    
+    <div class="portada">
+        <h1 class="title">Rick & Morty</h1>
+        <h2 class="subtitle">¡Conoce los detalles de tus personajes favoritos!</h2>
+    </div>
+    <div id="container" class="cardContainer">
+    </div>
+    <footer class="footer">
+        <p>© 2004 / 2024 - Olavarría Full Stack. Todos los derechos reservados</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
